--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.35.0
 transformers==4.38.2
-torch==2.2.2
 langdetect==1.0.9
+torch==2.2.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
